Adding ODDS reference to base.html (#161)

--- a/ckan/ckanext-odata_org_il/ckanext/odata_org_il/templates/base.html
+++ b/ckan/ckanext-odata_org_il/ckanext/odata_org_il/templates/base.html
@@ -19,4 +19,5 @@
       var c=1.0;var acz=function(s){if(0.5<c+s&&c+s<1.9){c=c+s;d.body.style.transform="scale("+c+")"}};
       w.aczoomin=function(){acz(.2)};w.aczoomout=function(){acz(-.2)};})(window, document);
   </script>
+  <script src="https://ask.datadeepsearch.io/embed/odds.js" async>
 {% endblock -%}
