--- a/ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/odata-theme.css
+++ b/ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/odata-theme.css
@@ -1,3 +1,14 @@
+body {
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+}
+
+html {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
 
 .masthead .nav>li>a, .masthead .nav>li>a:focus, .masthead .nav>li>a:hover, .masthead .nav>.active>a, .masthead .nav>.active>a:hover, .masthead .nav>.active>a:focus {
     font-weight: bold;
